# swarm

./: .gitignore  ADVANCED_CASCADE_PROMPTING_GUIDE.md  CODEBASE_PIPELINE_AUDIT.md  EARNINGS_PAGE_FIXES.md  FAQ.md  FRONTEND_PERFORMANCE_FIXES.md  GOOGLE_AUTH_SETUP.md  NETLIFY_INFRASTRUCTURE_ANALYSIS.md  NODECONTROLPANEL_BREAKDOWN_STRATEGY.md  PLAN_INTEGRATION_GUIDE.md  README.md  SECURITY_SESSION_MANAGEMENT.md  SUPABASE_TAB_SWITCHING_FIX.md  globals.d.ts  i18n.js  index.html  middleware.ts  netlify.toml  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
components/: EarningsDashboard.tsx  GlobalStatistics.tsx  Header.tsx  InfoTooltip.tsx  NetworkStats.tsx  NodeControlPanel.tsx  OnboardingTour.tsx  ReferralCodeDialog.tsx  ReferralProgram.tsx  Settings.tsx  Sidebar.tsx  SubscriptionNotice.tsx  TaskPipeline.tsx  WalletButton.tsx  WalletSelector.tsx
components/ui/: input.tsx  (+1 more)
hooks/: useDailyCheckIn.tsx  useEarnings.tsx  useSession.ts
lib/: subscriptionTiers.ts
pages/: Index.tsx
scripts/: cleanup-refresh-tokens.sql
services/: config.ts  earningsService.ts  proxyTaskService.ts  startupService.ts  taskPollingService.ts  taskService.ts  types.ts  unclaimedEarningsService.ts  userProfileService.ts
src/: App.tsx  index.css  main.tsx
store/: index.ts
styles/: SocialMedia.css
swarm_network/: Anchor.toml  idl.json
swarm_network/programs/swarm_network/: Cargo.toml
swarm_network/programs/swarm_network/src/: lib.rs
types/: hardware.ts  phantom.d.ts  session.ts
utils/: dateUtils.ts  gpuUtils.ts  storage.ts
(+172 files in other folders)
